# neural-networks-and-deep-learning

./: .gitignore  README.md  init_py_env.sh
.devcontainer/: devcontainer.json
c/: CMakeLists.txt  NetWork.cpp  NetWork.h  main.cpp  mnist_loader.cpp  mnist_loader.h
mnist_demo/: .gitignore  check_loader.cpp  main.cpp  makefile  matrix.cpp  matrix.h  mnist_loader.cpp  mnist_loader.h  mnist_loader_base.cpp  mnist_loader_base.h  mnist_loader_v2.cpp  mnist_loader_v2.h  network.cpp  network.h  network_v2.cpp  network_v2.h  network_v2_test.cpp  out  test_matrix.cpp
mnist_demo/resources/: .gitignore
src/: .gitignore  dump_mnist.py  network.py  network_test.py  np_test.py  test.py
tensorflow_learn/1/: download.py  restore_from_graphpb_test.py  restore_test.py  save_pic.py  softmax_regression.py
tensorrt_test/wangliMNIST_TEST/: CMakeLists.txt  main.cpp  restore_test.pb  restore_test.uff
tensorrt_test/wangliPluginV2_1_TEST/: config.py  main.cpp  restore_test.uff
tensorrt_test/wangliPlugin_TEST/: main.cpp
